tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-ingress-resource-policy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2022-01-27T18:20:25Z"
  generation: 3
  name: testcase26-ingress-resource-policy
  namespace: default
  resourceVersion: "37135"
  uid: 85e70fbc-0b4b-462c-9bc1-9a1e7e00db58
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: details
            port:
              number: 9080
        path: /details
        pathType: Prefix
