tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-multi-layer-allcaptured-scheme.yaml
# allCaptured: 	Checks that all pods are captured by at least one NetworkPolicy
namespaceList: ./topology/
podList: ./topology/


networkConfigList:
  # layers: k8s, istio, ingress
  - name: testcase26-config-1-k8s-istio-ingress
    networkPolicyList:
      - testcase26-networkpolicy-k8s-ratings-egress-to-productpage.yaml
      - testcase26-networkpolicy-istio-productpage-ingress-from-ratings.yaml
      - testcase26-ingress-resource-policy.yaml
    expectedWarnings: 0

  # layers: k8s, istio, ingress, calico
  - name: testcase26-config-1-k8s-istio-ingress-default-deny
    networkPolicyList:
      - testcase26-networkpolicy-k8s-ratings-egress-to-productpage.yaml
      - testcase26-networkpolicy-istio-productpage-ingress-from-ratings.yaml
      - testcase26-ingress-resource-policy.yaml
      - ../common-policies/policy-deny-all.yaml
    expectedWarnings: 0

  # layers: k8s, istio, ingress, calico
  - name: testcase26-config-1-k8s-istio-ingress-default-deny-all-layers
    networkPolicyList:
      - testcase26-networkpolicy-k8s-ratings-egress-to-productpage.yaml
      - testcase26-networkpolicy-istio-productpage-ingress-from-ratings.yaml
      - testcase26-ingress-resource-policy.yaml
      - ../common-policies/policy-deny-all.yaml
      - testcase26-networkpolicy-istio-default-deny.yaml
    expectedWarnings: 0

  # layers: k8s, calico, ingress
  - name: testcase26-config-1-k8s-calico-ingress
    networkPolicyList:
      - testcase26-networkpolicy-k8s-ratings-egress-to-productpage.yaml
      - testcase26-ingress-resource-policy.yaml
      - ../common-policies/policy-deny-all.yaml
    expectedWarnings: 0

  # layers:  istio, ingress
  - name: testcase26-config-1-istio-ingress
    networkPolicyList:
      #- testcase26-networkpolicy-k8s-ratings-egress-to-productpage.yaml
      - testcase26-networkpolicy-istio-productpage-ingress-from-ratings.yaml
      - testcase26-ingress-resource-policy.yaml
      #- ../common-policies/policy-deny-all.yaml
      - testcase26-networkpolicy-istio-default-deny.yaml
    expectedWarnings: 0



queries:
  - name: allcaptured-1
    allCaptured:
      - testcase26-config-1-k8s-istio-ingress
    expectedOutput: ../../expected_output/multi-layer-all-captured-1.txt
    expected: 15 # result of non-captured pods in layer k8s-calico

  - name: allcaptured-1-yaml
    allCaptured:
      - testcase26-config-1-k8s-istio-ingress
    outputConfiguration:
      outputFormat: yaml
    expectedOutput: ../../expected_output/multi-layer-all-captured-1.yaml
    expected: 15 # result of non-captured pods in layer k8s-calico

  - name: allcaptured-1-json
    allCaptured:
      - testcase26-config-1-k8s-istio-ingress
    outputConfiguration:
      outputFormat: json
    expectedOutput: ../../expected_output/multi-layer-all-captured-1.json
    expected: 15 # result of non-captured pods in layer k8s-calico


  - name: allcaptured-2
    allCaptured:
      - testcase26-config-1-k8s-istio-ingress-default-deny
    expected: 0 # all is captured on k8-calico layer

  - name: allcaptured-3
    allCaptured:
      - testcase26-config-1-k8s-istio-ingress-default-deny-all-layers
    expected: 0 # all is captured on k8-calico layer

  - name: allcaptured-4
    allCaptured:
      - testcase26-config-1-k8s-calico-ingress
    expected: 0 # all is captured on k8-calico layer

  - name: allcaptured-5
    allCaptured:
      - testcase26-config-1-istio-ingress
    expectedNotExecuted: 1
