tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-networkpolicy-calico-allow-all-pods-without-hep.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-allow-all
spec:
  selector: "!has(role)"
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
