tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-networkpolicy-istio-default-allow-productpage.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-productpage
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
    - {}
