tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-networkpolicy-istio-default-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: istio-config # root namespace
spec:
  action: ALLOW
  rules:
    - {}
