tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-networkpolicy-istio-default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: istio-config # root namespace
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.
