tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-networkpolicy-istio-productpage-ingress-from-ratings.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: testcase26-networkpolicy-istio-productpage-ingress-from-ratings
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  rules:
  - from:
    - source:
        principals:
          - cluster.local/ns/default/sa/bookinfo-ratings
    to:
    - operation:
        methods:
          - GET
