tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-networkpolicy-k8s-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
