tests/calico_testcases/example_policies/testcase26-multi-layer-policies/testcase26-networkpolicy-k8s-details-open-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testcase26-networkpolicy-k8s-details-open-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector: {}
